--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -1,4 +1,4 @@
-# Copyright (c) 2014. The SimGrid Team. All rights reserved.
+# Copyright (c) 2014-2016. The SimGrid Team. All rights reserved.
 
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the license (GNU LGPL) which comes with this package.
@@ -92,7 +92,6 @@ Blck H comm_waitany (int) (comms, void*, xbt_dynar_t)
 Blck H comm_wait (void) (comm, void*, smx_synchro_t) (timeout, double)
 Blck H comm_test (int) (comm, void*, smx_synchro_t)
 Blck H comm_testany (int) (comms, void*, xbt_dynar_t)
-Func - comm_get_remains (double) (comm, void*, smx_synchro_t)
 Func - comm_get_src_data (void*) (comm, void*, smx_synchro_t)
 Func - comm_get_dst_data (void*) (comm, void*, smx_synchro_t)
 Func - comm_get_src_proc (void*, smx_process_t) (comm, void*, smx_synchro_t)
