--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -688,36 +688,8 @@ INPUT                  = doxygen/index.doc \
                          @CMAKE_HOME_DIRECTORY@/src/simdag \
                          @CMAKE_HOME_DIRECTORY@/src/simix \
                          @CMAKE_BINARY_DIR@/include \
-                         @CMAKE_BINARY_DIR@/src
-
-
-###################################################
-##  PLEASE DON'T MESS WITH THE ORDER OF EXAMPLES ## (unless you know what you are doing, of course)
-###################################################
-
-INPUT +=                 @CMAKE_HOME_DIRECTORY@/examples/msg/README.doc \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/process-suspend/process-suspend.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/process-kill/process-kill.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/process-migration/process-migration.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/process-startkilltime/process-startkilltime.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-simple/trace-simple.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-platform/trace-platform.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-categories/trace-categories.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-masterworker/trace-masterworker.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-process-migration/trace-process-migration.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-user-variables/trace-user-variables.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-link-user-variables/trace-link-user-variables.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/trace-link-srcdst-user-variables/trace-link-srcdst-user-variables.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/network-ns3/network-ns3.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/io-storage/io-storage.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/io-file/io-file.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/io-remote/io-remote.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/actions-comm/actions-comm.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/actions-storage/actions-storage.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/app-pmm/ \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/dht-chord \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/task-priority/task-priority.c \
-                         @CMAKE_HOME_DIRECTORY@/examples/msg/properties/properties.c
+                         @CMAKE_BINARY_DIR@/src \
+                         @CMAKE_HOME_DIRECTORY@/examples/msg/README.doc
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
