--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1439,7 +1439,7 @@ PREDEFINED             = XBT_PUBLIC(type)="extern type" \
                          XBT_PUBLIC_DATA(type)="extern type" \
                          XBT_PUBLIC_CLASS=class \
                          XBT_INLINE= \
-			 XBT_PRIVATE=/** @private /
+			 XBT_PRIVATE=
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then
 # this tag can be used to specify a list of macro names that should be expanded.
