outline a page on high-level concepts to describe your platform

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -644,8 +644,9 @@ WARN_LOGFILE           =
 
 INPUT                  = doxygen/index.doc \
                          doxygen/getting_started.doc \
-                         doxygen/tutorial.doc \
                          doxygen/install.doc \
+			 doxygen/application.doc \
+                         doxygen/tutorial.doc \
                          doxygen/examples.doc \
                            doxygen/platform.doc \
                            doxygen/deployment.doc \
