--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -664,9 +664,9 @@ INPUT                  = doxygen/index.doc \
 			   doxygen/contributing.doc \
                          doxygen/tracing.doc \
 			 doxygen/FAQ.doc \
-			 doxygen/modules.doc \
+			 doxygen/module-msg.doc \
+			 doxygen/module-index.doc \
                            doxygen/module-xbt.doc \
-                           doxygen/module-msg.doc \
                            doxygen/module-sd.doc \
                            doxygen/module-surf.doc \
                            doxygen/module-simix.doc \
