--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -649,7 +649,7 @@ INPUT                  = doxygen/index.doc \
                            doxygen/bindings.doc \
                          doxygen/platform.doc \
 			   doxygen/models.doc \
-                           doxygen/pls.doc \
+                           doxygen/ns3.doc \
 			 doxygen/scenario.doc \
                            doxygen/deployment.doc \
                            doxygen/options.doc \
