--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -650,6 +650,7 @@ INPUT                  = doxygen/index.doc \
                          doxygen/platform.doc \
 			   doxygen/models.doc \
                            doxygen/ns3.doc \
+			   doxygen/platform_lua.doc \
 			 doxygen/scenario.doc \
                            doxygen/deployment.doc \
                            doxygen/options.doc \
