--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -115,4 +115,4 @@ xbt_dict_t asr_get_properties(const char* name);
 int        mc_random(int min, int max);
 void       set_category(smx_synchro_t synchro, const char* category) [[nohandler]];
 
-void       run_kernel(void* code) [[nohandler]];
+void       run_kernel(std::function<void()> const* code) [[nohandler]];
