--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ addons:
     - g++-4.7
   coverity_scan:
     project:
-      name: "mquinson/simgrid"
+      name: "simgrid/simgrid"
       description: "Build submitted via Travis CI"
     notification_email: martin.quinson@ens-rennes.fr
     build_command_prepend: "cmake -Denable_documentation=OFF -Denable_coverage=OFF -Denable_java=OFF -Denable_model-checking=OFF -Denable_lua=OFF -Denable_compile_optimizations=OFF -Denable_smpi=ON -Denable_smpi_MPICH3_testsuite=OFF -Denable_compile_warnings=OFF ."
