sonar: verbose mode, and verify examples too

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=simgrid
-sonar.projectName=Scanner for the SimGrid project. http://simgrid.org
+sonar.projectName=SimGrid simulator of distributed systems (http://simgrid.org)
 sonar.projectVersion=3.13.90
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=src,examples
 
 # Language, needed for SonarQube < 4.2
 sonar.language=cpp
@@ -13,3 +13,6 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+# Talk to me
+sonar.verbose=true
