--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -644,7 +644,8 @@ WARN_LOGFILE           =
 
 INPUT                  = doxygen/index.doc \
                          doxygen/getting_started.doc \
-                         doxygen/install.doc \
+                           doxygen/install.doc \
+			   doxygen/install_yours.doc \
 			 doxygen/application.doc \
                            doxygen/bindings.doc \
                          doxygen/platform.doc \
