--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
+# This file is used to scan the project for issues automatically 
+# Browse the result here: https://nemo.sonarqube.org/overview?id=simgrid
+
 sonar.projectKey=simgrid
 sonar.projectName=SimGrid simulator of distributed systems (http://simgrid.org)
 sonar.projectVersion=3.13.90
@@ -6,7 +9,7 @@ sonar.projectVersion=3.13.90
 sonar.sources=src,examples
 
 # Language, needed for SonarQube < 4.2
-sonar.language=cpp
+sonar.language=cpp,java,c
 
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-outputs
