sonar: reduce verbosity now that it works

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 sonar.sourceEncoding=UTF-8
 
 # Talk to me
-sonar.verbose=true
+# sonar.verbose=true
