sonar: also test include and testsuite (but not the foreign tests)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,16 @@
 # Browse the result here: https://nemo.sonarqube.org/overview?id=simgrid
 
 sonar.projectKey=simgrid
-sonar.projectName=SimGrid simulator of distributed systems (http://simgrid.org)
+sonar.projectName=SimGrid
 sonar.projectVersion=3.13.90
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src,examples
+sonar.sources=src,examples,include,testsuite
+
+# Exclude out unit tests from the analysis
+sonar.exclusions=src/*_unit.c,src/*_unit.cpp
+# Exclude the tests that we borrowed elsewhere
+sonar.exclusions=teshsuite/smpi/mpich3-test/*,teshsuite/smpi/isp/*
 
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-outputs
@@ -14,5 +19,5 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
 
-# Talk to me
+# Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
