--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,11 @@ sonar.projectKey=simgrid
 sonar.projectName=SimGrid
 sonar.projectVersion=3.13.90
 
+sonar.links.homepage=http://simgrid.org
+sonar.links.issue=http://github.com/simgrid/simgrid/issues
+
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src,examples,include,testsuite
+sonar.sources=src,examples,include,teshsuite
 
 # Exclude out unit tests from the analysis
 sonar.exclusions=src/*_unit.c,src/*_unit.cpp
