--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,10 +11,10 @@ sonar.links.issue=http://github.com/simgrid/simgrid/issues
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src,examples,include,teshsuite
 
-# Exclude out unit tests from the analysis
-sonar.exclusions=src/*_unit.c,src/*_unit.cpp
-# Exclude the tests that we borrowed elsewhere
-sonar.exclusions=teshsuite/smpi/mpich3-test/*,teshsuite/smpi/isp/*
+# Exclude some files from the analysis:
+#  - our unit tests 
+#  - the tests that we borrowed elsewhere (MPICH and ISP)
+sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/*,teshsuite/smpi/isp/*
 
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-outputs
