--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ addons:
 # Still need sudo for update-alternatives
 script:
    - cmake -Denable_documentation=OFF -Denable_coverage=OFF -Denable_java=ON -Denable_model-checking=OFF -Denable_lua=OFF -Denable_compile_optimizations=OFF -Denable_smpi=ON -Denable_smpi_MPICH3_testsuite=OFF -Denable_compile_warnings=ON . 
-   - ./tools/internal/travis-sonarqube.sh make VERBOSE=1 # run make in the sonar wrapper
-   - ctest --output-on-failure --timeout 100
+   # run make in the sonar wrapper && run the tests only if the build suceeded
+   - ./tools/internal/travis-sonarqube.sh make VERBOSE=1 && ctest --output-on-failure --timeout 100
 notifications:
   recipients:
     - martin.quinson@ens-rennes.fr
