[simix] Add a `run_blocking` simcall and simix::kernelSync
* run_blocking() is a generic blocking simcall. It is given a callback
  which is executed immediately in the SimGrid kernel. The callback is
  responsible for setting the suitable logic for waking up the process
  when needed.

* simix::kernelSync() is a higher level wrapper for this. It is given
  a callback which is executed in the kernel SimGrid and returns a
  simgrid::kernel::Future<T>. The kernel blocks the process until the
  Future is ready and either the value wrapped in the future to the
  process or raises the exception stored in the Future in the process.

* simgrid::simix::{Future,Promise} provide an abstration for
  asynchronous stuff happening in the SimGrid kernel. They are based
  on C++1z futures.

--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -116,3 +116,4 @@ int        mc_random(int min, int max);
 void       set_category(smx_synchro_t synchro, const char* category) [[nohandler]];
 
 void       run_kernel(std::function<void()> const* code) [[nohandler]];
+void       run_blocking(std::function<void()> const* code) [[block,nohandler]];
