--- a/.gitignore
+++ b/.gitignore
@@ -269,6 +269,7 @@ teshsuite/simdag/evaluate-get-route-time/evaluate-get-route-time
 teshsuite/simdag/evaluate-parse-time/evaluate-parse-time
 teshsuite/simix/check_defaults/check_defaults
 teshsuite/simix/stack_overflow/stack_overflow
+teshsuite/simix/generic_simcalls/generic_simcalls
 teshsuite/smpi/bug-17132/bug-17132
 teshsuite/smpi/coll-allgather/coll-allgather
 teshsuite/smpi/coll-allgatherv/coll-allgatherv
