Getting rid of C exceptions
The goal if to used native C++ exception instead our own SLJL-based C
exceptions:

* this removes the problem of exception conversion between C and C++
  context and the lack of interoperability of SimGrid THROW/TRY/CATCH
  with its C++ counterpart;

* we can still throw exceptions from C;

* but we can't catch exception from C anymore, you should use C++
  instead if order to do that;

Things to do afterwards:

* remove exceptions from the C public APIs;

* restore the multiple usage debugging;

* fix the backtrace code and separate from the exception code in order
  to be able to add backtraces to any exception and get backtraces
  without generating exceptions;

* add support for attaching backtraces to any exception;

* attach context (baktraces and cause) everywhere;

--- a/teshsuite/xbt/CMakeLists.txt
+++ b/teshsuite/xbt/CMakeLists.txt
@@ -8,7 +8,7 @@ foreach(x heap_bench log_large log_usage mallocator parallel_log_crashtest parma
 endforeach()
 
 if(HAVE_MMALLOC)
-  add_executable       (mmalloc_test ${CMAKE_CURRENT_SOURCE_DIR}/mmalloc/mmalloc_test.c)
+  add_executable       (mmalloc_test ${CMAKE_CURRENT_SOURCE_DIR}/mmalloc/mmalloc_test.cpp)
   target_link_libraries(mmalloc_test simgrid)
   set_target_properties(mmalloc_test  PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/mmalloc)
 endif()
@@ -16,7 +16,7 @@ endif()
 set(tesh_files    ${tesh_files}     ${CMAKE_CURRENT_SOURCE_DIR}/log_usage/log_usage_ndebug.tesh
                                     ${CMAKE_CURRENT_SOURCE_DIR}/mmalloc/mmalloc_64.tesh
                                     ${CMAKE_CURRENT_SOURCE_DIR}/mmalloc/mmalloc_32.tesh          PARENT_SCOPE)
-set(teshsuite_src ${teshsuite_src}  ${CMAKE_CURRENT_SOURCE_DIR}/mmalloc/mmalloc_test.c           PARENT_SCOPE)
+set(teshsuite_src ${teshsuite_src}  ${CMAKE_CURRENT_SOURCE_DIR}/mmalloc/mmalloc_test.cpp           PARENT_SCOPE)
 
 foreach(x heap_bench log_large parallel_log_crashtest parmap_test) #mallocator parmap_bench
   ADD_TESH(tesh-xbt-${x} --setenv bindir=${CMAKE_BINARY_DIR}/teshsuite/xbt/${x} --cd ${CMAKE_HOME_DIRECTORY}/teshsuite/xbt/${x} ${x}.tesh)
